Fix offset components-placeholder spacing

--- a/src/blocks/gallery-offset/styles/editor.scss
+++ b/src/blocks/gallery-offset/styles/editor.scss
@@ -1,6 +1,6 @@
 .wp-block[data-type="coblocks/gallery-offset"] {
 
-	.components-form-file-upload {
+	.components-form-file-upload .components-placeholder {
 		margin-top: 20px;
 	}
 
